<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_icon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/food_crunch_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_crunch_icon" />

            <TextView
                android:id="@+id/michael_loupos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/michael_loupos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_license" />

            <TextView
                android:id="@+id/check_mark_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/check_mark_icon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check" />

            <TextView
                android:id="@+id/mourad_mokrane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mourad_mokrane" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_license" />

            <TextView
                android:id="@+id/lock_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lock_icon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock" />

            <TextView
                android:id="@+id/sam_smith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sam_smith" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_license" />

            <TextView
                android:id="@+id/leaf_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/leaf_icon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/leaf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaf" />

            <TextView
                android:id="@+id/remy_medard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remy_medard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_license" />

            <TextView
                android:id="@+id/comment_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/comment_icon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment" />

            <TextView
                android:id="@+id/eugen_belyakoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eugen_belyakoff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_license" />

            <TextView
                android:id="@+id/trash_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/trash_icon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trash" />

            <TextView
                android:id="@+id/filip_malinowski"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filip_malinowski" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_license" />

            <TextView
                android:id="@+id/capturing_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/capturing_photos"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/taking_photos_simply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taking_photos_simply" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc2_5_license" />

            <TextView
                android:id="@+id/custom_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/custom_dialog"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/creating_a_custom_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creating_a_custom_dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc2_5_license" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>