<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/dictionary_search"
        android:singleLine="true"
        android:lines="1"
        android:digits="abcdefghijklmnopqrstuvwxyz"
        android:textColorHighlight="#fffbd072"
        android:hint="@string/my_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/dictionary_results"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Button
            android:id="@+id/clear_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_text">

        </Button>

        <Button
            android:id="@+id/back_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_text">

        </Button>
        <Button
            android:id="@+id/acknowledgement_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/acknowledgement_text">

        </Button>
        <TextView
            android:id="@+id/acknowledgements_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_acknowledgements"/>
        </LinearLayout>


</LinearLayout>