<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/wf_acknowledgement_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/wf_acknowledgement_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/instructions_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/begin_game_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/begin_game_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/exit_button"
            android:textSize="24sp" />



    </LinearLayout>



</LinearLayout>
