<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityBaseBackground"
    android:orientation="vertical" >
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/communication_button"
        android:text="@string/wf_acknowledgement_button"/>

    <TextView
        android:id="@+id/communication_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <Button
                android:id="@+id/communication_registor_button"
                android:onClick="onClick"
                android:text="@string/register" />

            <Button
                android:id="@+id/communication_unregistor_button"
                android:onClick="onClick"
                android:text="@string/unregister" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/communication_edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="input message here ..."
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <Button
                android:id="@+id/communication_send"
                android:onClick="onClick"
                android:text="@string/send_label" />

            <Button
                android:id="@+id/communication_clear"
                android:onClick="onClick"
                android:text="@string/clear_label" />
        </TableRow>
    </TableLayout>

    <!-- GCM test code xml above, Parse test code xml below -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip">

        <EditText
            android:id="@+id/et_cognito_dev_auth_sample_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="key..." />

        <EditText
            android:id="@+id/et_cognito_dev_auth_sample_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="value..." />

        <Button
            android:id="@+id/btn_cognito_dev_auth_sample_sync"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sync" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Key/Value Pairs"
            android:gravity="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_cognito_dev_auth_sample_refresh"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Refresh"
            android:gravity="center" />

    </LinearLayout>

    <ListView
        android:layout_marginTop="20dip"
        android:layout_marginBottom="20dip"
        android:id="@+id/lv_cognito_dev_auth_sample"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>